--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "pip>=24.3.1",
+    "roboflow>=1.1.50",
     "ultralytics>=8.3.57",
 ]
