--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.10"
 dependencies = [
     "pip>=24.3.1",
     "roboflow>=1.1.50",
+    "supervision>=0.24.0",
     "ultralytics>=8.3.57",
 ]
